@@ -30,6 +30,12 @@ abstract class Cache_Abstract
     protected $_expire = 1800;
     
     /**
+     * 是否压缩缓存数据
+     * @var bool
+     */
+    protected $_compress = true;
+    
+    /**
      * 缓存服务器
      * 
      * @var object | resource | null
@@ -37,23 +43,11 @@ abstract class Cache_Abstract
     protected $_cache_server = null;
     
     /**
-     * 创建一个缓存服务器连接
-     * 
-     */
-    abstract protected function _connect();
-        
-    /**
-     * 关闭缓存服务器连接
-     * 
-     */
-    abstract protected function close();
-    
-    /**
      * 读取缓存
      * 
      * @param string $name
      */
-    abstract protected function _get($name);
+    abstract protected function get($name);
     
     /**
      * 写入缓存
@@ -62,14 +56,14 @@ abstract class Cache_Abstract
      * @param mixed $value
      * @param int $expire
      */
-    abstract protected function _set($name, $value, $expire = null);
+    abstract protected function set($name, $value, $expire = null);
     
     /**
      * 清除缓存
      * 
      * @param string $name
      */
-    abstract protected function _unset($name);
+    abstract protected function del($name);
     
     /**
      * 构造
@@ -77,6 +71,7 @@ abstract class Cache_Abstract
      * @param array $params => array (
      *     host     => (string) 主机，默认值为空
      *     port     => (int) 端口，默认值为空
+     *     
      *     prefix   => (string) 缓存名前缀，默认值为空
      * )
      * @return Cache_Abstract
